# openapi.yaml
@@ -35,6 +35,8 @@ paths:
           required: false
           schema:
             type: string
+        - $ref: '#/components/parameters/PageSize'
+        - $ref: '#/components/parameters/Cursor'
       responses:
         '200':
           description: List of triggers
@@ -118,6 +120,8 @@ paths:
         schema:
           type: string
         required: true
+      - $ref: '#/components/parameters/PageSize'
+      - $ref: '#/components/parameters/Cursor'
     get:
       summary: List triggers occurrences
       operationId: listTriggersOccurrences
@@ -143,6 +147,9 @@ paths:
       description: List registered workflows
       tags:
         - orchestration.v1
+      parameters:
+        - $ref: '#/components/parameters/PageSize'
+        - $ref: '#/components/parameters/Cursor'
       responses:
         '200':
           description: List of workflows
@@ -278,6 +285,8 @@ paths:
             type: boolean
           example: true
           required: false
+        - $ref: '#/components/parameters/PageSize'
+        - $ref: '#/components/parameters/Cursor'
       tags:
         - orchestration.v1
       responses:
@@ -1105,8 +1114,18 @@ components:
           items:
             $ref: '#/components/schemas/Workflow'
           type: array
+        pageSize:
+          type: integer
+        hasMore:
+          type: boolean
+        previous:
+          type: string
+        next:
+          type: string
       required:
         - data
+        - pageSize
+        - hasMore
     TriggerData:
       type: object
       required:
@@ -1167,8 +1186,18 @@ components:
           items:
             $ref: '#/components/schemas/TriggerOccurrence'
           type: array
+        pageSize:
+          type: integer
+        hasMore:
+          type: boolean
+        previous:
+          type: string
+        next:
+          type: string
       required:
         - data
+        - pageSize
+        - hasMore
     ListTriggersResponse:
       type: object
       properties:
@@ -1176,8 +1205,18 @@ components:
           items:
             $ref: '#/components/schemas/Trigger'
           type: array
+        pageSize:
+          type: integer
+        hasMore:
+          type: boolean
+        previous:
+          type: string
+        next:
+          type: string
       required:
         - data
+        - pageSize
+        - hasMore
     CreateWorkflowRequest:
       $ref: '#/components/schemas/WorkflowConfig'
     CreateWorkflowResponse:
@@ -1206,13 +1245,24 @@ components:
         data:
           $ref: '#/components/schemas/WorkflowInstance'
     ListRunsResponse:
-      required:
-        - data
+      type: object
       properties:
         data:
           items:
             $ref: '#/components/schemas/WorkflowInstance'
           type: array
+        pageSize:
+          type: integer
+        hasMore:
+          type: boolean
+        previous:
+          type: string
+        next:
+          type: string
+      required:
+        - data
+        - pageSize
+        - hasMore
     GetWorkflowResponse:
       type: object
       required:
@@ -3554,6 +3604,32 @@ components:
                 type: string
               error:
                 type: string
+  parameters:
+    PageSize:
+      name: pageSize
+      in: query
+      description: |
+        The maximum number of results to return per page.
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        maximum: 1000
+        default: 15
+        format: int64
+      example: 100
+    Cursor:
+      name: cursor
+      in: query
+      description: |
+        Parameter used in pagination requests.
+        Set to the value of next for the next page of results.
+        Set to the value of previous for the previous page of results.
+        No other parameters can be set when this parameter is set.
+      required: false
+      schema:
+        type: string
+        example: aHR0cHM6Ly9nLnBhZ2UvTmVrby1SYW1lbj9zaGFyZQ==
   responses:
     ErrorResponse:
       description: General error
@@ -3567,29 +3643,6 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/V2Error'
-  parameters:
-    Cursor:
-      name: cursor
-      in: query
-      description: |
-        Parameter used in pagination requests.
-        Set to the value of next for the next page of results.
-        Set to the value of previous for the previous page of results.
-        No other parameters can be set when this parameter is set.
-      schema:
-        type: string
-        example: aHR0cHM6Ly9nLnBhZ2UvTmVrby1SYW1lbj9zaGFyZQ==
-    PageSize:
-      name: pageSize
-      in: query
-      description: |
-        The maximum number of results to return per page.
-      example: 100
-      schema:
-        type: integer
-        format: int64
-        minimum: 1
-        maximum: 1000
   securitySchemes:
     Authorization:
       type: oauth2
